--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -153,10 +153,10 @@ jobs:
           aarch64-unknown-linux-gnu) QEMU_PREFIX="qemu-aarch64 -L /usr/aarch64-linux-gnu" ;;
         esac;
 
-        # Shell completions
-        for sh in 'bash' 'fish' 'zsh'; do
-          $QEMU_PREFIX "${{ steps.strip.outputs.BIN_PATH }}" gen-completions -s $sh -o "${ARCHIVE_DIR}/completions"
-        done
+        # # Shell completions
+        # for sh in 'bash' 'fish' 'zsh'; do
+        #   $QEMU_PREFIX "${{ steps.strip.outputs.BIN_PATH }}" gen-completions -s $sh -o "${ARCHIVE_DIR}/completions"
+        # done
 
         # base compressed package
         pushd "${PKG_STAGING}/" >/dev/null
